# EDGECORE

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AUDIT_TECHNIQUE_EDGECORE.md  AUDIT_TECHNIQUE_EDGECORE_V3.md  BACKTEST_USAGE.md  CONFIG_GUIDE.md  CONFIG_SETUP_COMPLETE.txt  CORRECTION_PLAN.md  CPP_ACCELERATION_QUICKSTART.md  Dockerfile  EDGECORE_MASTER_AUDIT_V6.md  Makefile  PHASE1_COMPLETION_REPORT.md  PLAN_ACTION_EDGECORE_2026-03-17.md  PRODUCTION_ROADMAP.md  README.GITHUB.md  README.md  README_PRIVATE.md  SYSTEM_VALIDATION_REPORT.md  T2_COMPLETION_REPORT.md  bt_out.txt  bt_results_v10.txt  bt_results_v11_hybrid.txt  bt_results_v12.txt  bt_results_v13.txt  bt_results_v14.txt  bt_results_v15.txt  bt_results_v15b.txt  bt_results_v16.txt  bt_results_v17.txt  bt_results_v17b.txt  bt_results_v17c.txt  bt_results_v17d.txt  bt_results_v17e.txt  bt_results_v17f.txt  bt_results_v17g.txt  (+58 more)
.claude/: context.md  rules.md
.githooks/: post-commit
.github/: copilot-instructions.md
ARCHIVED_crypto/: ccxt_engine.py
agents/: code_auditor.md  dev_engineer.md  quant_researcher.md  risk_manager.md
architecture/: decisions.md  system_design.md
backtester/: __init__.py  oos.py  runner.py  walk_forward.py
backtests/: context.md  cost_model.py  event_driven.py  metrics.py  order_book.py  parameter_cv.py  position_tracker.py  runner.py  sector_exposure_manager.py  simulation_loop.py  strategy_simulator.py  stress_testing.py  walk_forward.py
benchmarks/: spx_comparison.py
common/: __init__.py  circuit_breaker.py  context_memory.py  error_handler.py  errors.py  ibkr_rate_limiter.py  retry.py  secrets.py  typed_api.py  types.py  validators.py
config/: .env.example  config.yaml  dev.yaml  paper.yaml  prod.yaml  schemas.py  settings.py  test.yaml
data/: corporate_actions.py  delisting_guard.py  event_filter.py  feature_store.py  intraday_loader.py  kill_switch_state.bak  liquidity_filter.py  loader.py  multi_timeframe.py  preprocessing.py  validators.py
docs/: 2026-02-12_CONFIG_SETUP_COMPLETE.txt  2026-02-25_AUDIT_STRATEGIQUE_2026-02-25.md  2026-02-25_STRATEGIC_AUDIT_2026-02-25.md  2026-02-26_AUDIT_STRATEGIQUE_EDGECORE_V5.md  2026-02-26_EDGECORE_MASTER_AUDIT_V6.md  2026-03-03_EDGECORE — Roadmap correctifs vers pro.md  2026-03-04_EDGECORE_V31_PLAN_ACTION.md  2026-03-04_Plan d'Action — Correction Structurell.md  2026-03-07_EDGECORE_INSTITUTIONAL_ROADMAP.md  AUDIT_FINAL_COMPLET.md  AUDIT_TECHNIQUE_EDGECORE_V3.md  CORRECTION_PLAN.md  DEPLOYMENT.md  RUNBOOK.md
docs/archived/: CMakeLists.txt
edgecore/: ARCHIVED_cointegration_cpp.cp313-win_amd64.pyd  __init__.py  backtest_engine_cpp.cp313-win_amd64.pyd  backtest_engine_wrapper.py  cointegration_cpp.cp313-win_amd64.pyd  cointegration_engine_wrapper.py
edgecore-repo-backup.git/: config  packed-refs
examples/: __init__.py  examples_backtest.py  examples_pair_discovery.py  test_2021_bullmarket.py  test_stablecoins.py
execution/: __init__.py  algo_executor.py  backtest_execution.py  base.py  borrow_check.py  ccxt_engine.py  concentration_limits.py  context.md  gw_manager.py  ibkr_engine.py  ibkr_sync_gateway.py  ml_impact.py  modes.py  modes_legacy.py  monte_carlo.py  order_book.py  order_lifecycle.py  order_lifecycle_integration.py  paper_execution.py  partial_profit.py  position_stops.py  rate_limiter.py  reconciler.py  shutdown_manager.py  slippage.py  time_stop.py  trailing_stop.py  venue_models.py
execution_engine/: __init__.py  router.py
knowledge/: ibkr_constraints.md  trading_constraints.md
live_trading/: __init__.py  paper_runner.py  runner.py
models/: __init__.py  adaptive_thresholds.py  cointegration.py  cointegration_fast.c  cointegration_fast.cp311-win_amd64.pyd  cointegration_fast.cp313-win_amd64.pyd  cointegration_fast.pyx  context.md  half_life_estimator.py  hedge_ratio_tracker.py  johansen.py  kalman_hedge.py  markov_regime.py  ml_threshold_optimizer.py  ml_threshold_validator.py  model_retraining.py  performance_optimizer.py  performance_optimizer_s41.py  regime_detector.py  spread.py  stationarity_monitor.py  structural_break.py
monitoring/: API_SECURITY.md  DASHBOARD_CACHING.md  DEPLOYMENT_GUIDE.md  PRODUCTION_LOGGING.md  alerter.py  api.py  api_schema.py  api_security.py  cache.py  cache_advanced.py  cache_advanced_s42.py  correlation_monitor.py  dashboard.py  email_alerter.py  events.py  latency.py  logger.py  logging_config.py  metrics.py  ml_drift.py  portfolio_extension.py  portfolio_extension_s43.py  profiler.py  rich_dashboard.py  slack_alerter.py  tracing.py
pair_selection/: __init__.py  blacklist.py  discovery.py  filters.py
persistence/: __init__.py  audit_trail.py
portfolio_engine/: __init__.py  allocator.py  concentration.py  hedger.py
research/: pair_discovery.py  param_optimization.py
results/: ablation_phase0.txt  bt_v23_output.txt  bt_v24_output.txt  bt_v25_output.txt  bt_v26_output.txt  bt_v27_output.txt  bt_v28_output.txt  bt_v29_output.txt  bt_v31_output.txt  bt_v34c_output.txt  bt_v35_output.json  bt_v36_output.json  calibration_phase0.txt  debug_counters.txt  final_calibration_phase0.txt  final_tests.txt  phase15_universe_expansion.json  test_output.txt  test_output2.txt  test_output3.txt  v27_analysis.txt  v27_signals_analysis.txt  v27_trades_raw.txt  v35_full_output.txt  v35_stdout.txt  v37_alloc75_heat45.txt  v37_final_output.txt  v37_lever15_dd_scaled.txt  v37_lever15_final.txt  v37_lever15_novarlimit.txt  v37_lever15_sectorfix.txt  v37_lever15_varfix.txt  v37_leverage15_correct.txt  v37_leverage15_heat_scaled.txt  v37_leverage15_scaled_stop.txt  v37_leverage15_test.txt  v37_leverage_frontier.txt  v37_leverage_scan.txt  v37_opt2_output.txt  v37_opt3_output.txt  (+34 more)
risk/: __init__.py  beta_neutral.py  constraints.py  drawdown_manager.py  engine.py  facade.py  factor_model.py  kelly_sizing.py  pca_spread_monitor.py  sector_exposure.py  spread_correlation.py  var_monitor.py
risk_engine/: __init__.py  context.md  kill_switch.py  portfolio_risk.py  position_risk.py
scheduler/: install_task.bat  manage_task.bat  retraining_task.py  (+1 more)
(+627 files in other folders)
