[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgecore"
version = "1.0.0"
description = "Production-grade statistical arbitrage trading system"
authors = [{name = "Quant Dev", email = "dev@edgecore.local"}]
requires-python = "==3.11.9"
dependencies = [
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scipy==1.11.1",
    "scikit-learn==1.3.0",
    "statsmodels==0.14.0",
    "vectorbt==0.25.0",
    "ib-insync==0.9.17",
    "pyyaml==6.0",
    "python-dotenv==1.0.0",
    "structlog==23.1.0",
    "prometheus-client==0.17.1",
]

[project.optional-dependencies]
dev = ["pytest==7.4.0", "pytest-cov==4.1.0", "mypy==1.8.0"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
strict_optional = true
strict_equality = true

# Exclude paths that don't need strict checking
[[tool.mypy.overrides]]
module = [
    "ib_insync",
    "statsmodels",
    "vectorbt",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
exclude = [
    "ARCHIVED_cpp_sources",
    "ARCHIVED_crypto",
    "build",
    "venv",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
# Ignore minor/stylistic rules that don't affect correctness
ignore = [
    "E402",   # module-import-not-at-top-of-file (common in scripts)
    "E501",   # line-too-long (handled by formatter)
    "E722",   # bare-except (acceptable in resilient trading code)
    "E741",   # ambiguous-variable-name (l, O, I)
    "E721",   # type-comparison (use isinstance() - informational only)
    "E731",   # lambda-assignment
    "E712",   # true-false-comparison (== True)
]
# Rules to enforce
select = ["F", "E"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["F401"]
"tests/validation/*" = ["F401"]
"ARCHIVED_*/**" = ["F401"]
