[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgecore"
version = "1.0.0"
description = "Production-grade statistical arbitrage trading system"
authors = [{name = "Quant Dev", email = "dev@edgecore.local"}]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.3,<2.0.0",
    "pandas>=2.0.3,<3.0.0",
    "scipy>=1.11.1,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "statsmodels>=0.14.0",
    "vectorbt>=0.25.0",
    "ib-insync>=0.9.17",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.17.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "mypy>=1.8.0"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_unused_ignores = false
warn_redundant_casts = false
warn_no_return = false
strict_optional = false
strict_equality = false

# Exclude paths that don't need strict checking
[[tool.mypy.overrides]]
module = [
    "ib_insync",
    "ib_insync.*",
    "ibapi",
    "ibapi.*",
    "statsmodels",
    "statsmodels.*",
    "vectorbt",
    "vectorbt.*",
]
ignore_missing_imports = true

# Modules with broad ignore (non-critical paths or third-party-heavy code)
[[tool.mypy.overrides]]
module = [
    "strategies.*",
    "signal_engine.*",
    "portfolio_engine.*",
    "models.*",
    "monitoring.*",
]
ignore_errors = true

# Strict mode on critical financial modules
[[tool.mypy.overrides]]
module = [
    "risk.*",
    "risk_engine.*",
    "execution.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
exclude = [
    "ARCHIVED_cpp_sources",
    "ARCHIVED_crypto",
    "build",
    "venv",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
# Ignore minor/stylistic rules that don't affect correctness
ignore = [
    "E402",   # module-import-not-at-top-of-file (common in scripts)
    "E501",   # line-too-long (handled by formatter)
    "E722",   # bare-except (acceptable in resilient trading code)
    "E741",   # ambiguous-variable-name (l, O, I)
    "E721",   # type-comparison (use isinstance() - informational only)
    "E731",   # lambda-assignment
    "E712",   # true-false-comparison (== True)
]
# Rules to enforce
select = ["F", "E"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["F401"]
"tests/validation/*" = ["F401"]
"tests/*" = ["F841"]
"ARCHIVED_*/**" = ["F401"]
