[build-system]
requires = ["setuptools>=68.0", "wheel", "Cython>=3.0,<4.0", "numpy>=1.24.3"]
build-backend = "setuptools.build_meta"

[project]
name = "edgecore"
version = "1.0.0"
description = "Production-grade statistical arbitrage trading system"
authors = [{name = "Quant Dev", email = "dev@edgecore.local"}]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.3,<2.0.0",
    "pandas>=2.0.3,<3.0.0",
    "scipy>=1.11.1,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "statsmodels>=0.14.0",
    "vectorbt>=0.25.0",
    "ib-insync>=0.9.17",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.0.0",
    "pyright>=1.1.400",
    "ruff>=0.15.0",
    "bandit>=1.7.0",
    "mypy>=1.8.0",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_unused_ignores = false
warn_redundant_casts = false
warn_no_return = false
strict_optional = false
strict_equality = false

# Exclude paths that don't need strict checking
[[tool.mypy.overrides]]
module = [
    "ib_insync",
    "ib_insync.*",
    "ibapi",
    "ibapi.*",
    "statsmodels",
    "statsmodels.*",
    "vectorbt",
    "vectorbt.*",
]
ignore_missing_imports = true

# Modules with broad ignore (non-critical paths or third-party-heavy code)
[[tool.mypy.overrides]]
module = [
    "strategies.*",
    "portfolio_engine.*",
    "models.*",
    "monitoring.*",
]
ignore_errors = true

# signal_engine: progressive mypy activation (CERT-10)
# Removed from ignore_errors=true block to enable type checking.
# Global config is permissive (disallow_untyped_defs=false), so only
# genuine type errors will surface — no annotation coverage required.
[[tool.mypy.overrides]]
module = [
    "signal_engine.*",
]
ignore_missing_imports = true

# Strict mode on critical financial modules
[[tool.mypy.overrides]]
module = [
    "risk.*",
    "risk_engine.*",
    "execution.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
exclude = [
    "ARCHIVED_cpp_sources",
    "ARCHIVED_crypto",
    "build",
    "venv",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
# Rules activées
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (ordre des imports)
    "UP",   # pyupgrade (syntaxe Python moderne)
    "B",    # flake8-bugbear (bugs courants)
    "C90",  # mccabe complexity
]
ignore = [
    "E402",   # module-import-not-at-top-of-file (scripts & __init__)
    "E501",   # line-too-long (géré par formatter)
    "E722",   # bare-except (acceptable en trading résilient)
    "E741",   # ambiguous-variable-name (l, O, I)
    "E721",   # type-comparison
    "E731",   # lambda-assignment
    "E712",   # true-false-comparison
    "B006",   # mutable-default-argument (patterns de config trading)
    "B007",   # unused-loop-control-variable
    "B008",   # function-call-in-default-argument (Pydantic/dataclass)
    "B023",   # function-in-loop (courant dans backtest loops)
    "UP007",  # Optional[X] → X | Y (migration progressive)
    "UP035",  # deprecated imports (migration progressive)
    "C901",   # function-too-complex (code financier dense)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["F401", "I"]
"tests/validation/*" = ["F401"]
"tests/*" = ["F841", "F401", "B017"]
"ARCHIVED_*/**" = ["F401", "I", "UP", "B"]
"**/__init__.py" = ["F401", "I"]  # re-exports légitimes

[tool.ruff.lint.isort]
known-first-party = ["config", "common", "data", "models", "signal_engine", "risk", "risk_engine", "execution", "execution_engine", "portfolio_engine", "universe", "pair_selection", "live_trading", "monitoring", "persistence", "backtests", "backtester"]
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 15  # seuil adapté au code financier

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "backups", "ARCHIVED_cpp_sources", "ARCHIVED_crypto", "docs", "research"]
skips = [
    "B101",  # assert_used — ok dans les gardes internes
    "B311",  # random — numpy.random utilisé, pas random.random en crypto
    "B608",  # SQL injection — pas de SQL direct, ORM uniquement
]
severity = "medium"  # ne reporter que medium+ en CI
confidence = "medium"

[tool.coverage.run]
# Limit instrumentation to production packages only — excludes tests/, build/,
# scripts/, research/, venv/ and other non-production paths.
omit = [
    "tests/*",
    "build/*",
    "venv/*",
    ".venv/*",
    "scripts/*",
    "docs/*",
    "research/*",
    "examples/*",
    "tasks/*",
    "backups/*",
    "cache/*",
    "results/*",
    "logs/*",
    "knowledge/*",
    "setup.py",
    "main.py",
    "conftest.py",
    "*/__pycache__/*",
    "ARCHIVED_*",
]

[tool.coverage.report]
# Only show files with less than 100% coverage in the terminal report.
skip_covered = false
show_missing = true
